Fix font rendering in benchmark dialog

Use Pango to render text around the benchmark graph, rather than the toy
Cairo text API.

https://bugzilla.gnome.org/show_bug.cgi?id=656864